test/fixtures/typecheck/fail/UnknownTypeclassInFunctionConstraint.lam
module UnknownTypeclassInFunctionConstraint

data D = D

default : Foo a => a -> D
default _ = D
